# BananaBeats

./: .gitignore  CMakeLists.txt  gpio.s  ledmaurice.s
doc/: Checkpoint.tex  Report.tex
programs/part_3/: README.md  gpio.s  gpio17.s  kernel.img
programs/part_4/: HUauxPython.py  HUmain  HUmain.c  HUtouchHat.c  Makefile  Makefileproper  auxPython.py  compilation.txt  defs.h  gui.c  gui.h  guiTest.c  guiUtils.c  guiUtils.h  initialiser.c  initialiser.h  main  main.c  py.py  pythonUtils.c  run.py  runSounds.py  soundsTable.h  symbolTable.c  symbolTable.h  test.py  touchHat.c  utils  utils.c  utils.h
programs/part_4/maurice_test/: compile.sh  myModule.c  py.py
programs/part_4/python/: run.py
programs/part_4/python/adafruit_libraries/examples/: playtest.py  run.py
programs/part_4/python/maurice_test/: compile  myModule.c
src/: Makefile  assemble.c  auxPython.py  dataProcessing.c  defs.h  emulate.c  emulate.h  executeInstructions.c  executeInstructions.h  guiTest.c  guiUtils.c  guiUtils.h  initialiser.h  main.c  pipeline.c  pipeline.h  symbolTable.c  symbolTable.h  touchHat.c  utils.c  utils.h
src/assembler/: assemble.c  defs.h  encodeInstructions.c  encodeInstructions.h  getFormat.c  getFormat.h  mauricetest.csg  symbolTable.c  symbolTable.h  symboltable.c  symboltable.h  utils.c  utils.h
src/emulator/: Makefile  defs.h  emulate.c  executeInstructions.c  executeInstructions.h  pipeline.c  pipeline.h  utils.c  utils.h
